--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <!-- Required meta tags -->
   <meta charset="utf-8">
@@ -7,17 +8,19 @@
 
   <title>Hello, world!</title>
 </head>
+
 <body>
 
   <!-- Banner Section -->
-  <section class="position-relative banner-sec"> 
+  <section class="position-relative banner-sec">
     <img src="../../../assets/img/banner.png" class="w-100">
     <div class="container">
       <div class="row">
         <div class="col-lg-5 col-md-6">
           <div class="banner-content py-md-0 py-5">
             <h1 class="fw-normal"><span class="fw-bold text-primary">Your doctor</span>, <br />your treatment</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+              dolore magna aliqua.</p>
             <button type="button" class="btn btn-primary">Explore More</button>
           </div>
         </div>
@@ -81,7 +84,8 @@
           <small class="text-uppercase text-primary">About Medicure</small>
           <h2>Regular check-ups for patients</h2>
 
-          <p class="my-4">Dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia.</p>
+          <p class="my-4">Dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut
+            fugit, sed quia.</p>
 
           <div class="d-flex gap-1">
             <div class="flex-shrink-0">
@@ -122,10 +126,10 @@
           <div class="image-box bg-white shadow-lg p-3 rounded-3">
             <img src="../../../assets/img/cardiology.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Cardiology</h5>
-            <p>Cardiology is the medical speciality dealing with 
-                the diagnosis and treatment of diseases and disorders of the heart.
-                 Also treated are abnormal heart rhythms, heart failure,
-                  high blood pressure and some rarer conditions.</p>
+            <p>Cardiology is the medical speciality dealing with
+              the diagnosis and treatment of diseases and disorders of the heart.
+              Also treated are abnormal heart rhythms, heart failure,
+              high blood pressure and some rarer conditions.</p>
           </div>
         </div>
 
@@ -133,10 +137,10 @@
           <div class="image-box bg-white shadow-lg p-3 rounded-3">
             <img src="../../../assets/img/dermatology.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Dermatology</h5>
-            <p>Dermatology is the branch of medicine dealing with the skin.  
-                A dermatologist is a specialist medical 
-                doctor who manages diseases related to skin, hair, nails, and 
-                some cosmetic problems.</p>
+            <p>Dermatology is the branch of medicine dealing with the skin.
+              A dermatologist is a specialist medical
+              doctor who manages diseases related to skin, hair, nails, and
+              some cosmetic problems.</p>
           </div>
         </div>
 
@@ -145,8 +149,8 @@
             <img src="../../../assets/img/neorology.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Neurology</h5>
             <p>Neurology is a branch of medical science that focuses on the brain
-                 and its different aspects. It focuses on treating conditions that affect
-                 the nervous system and diagnoses ailments that affect the brain.</p>
+              and its different aspects. It focuses on treating conditions that affect
+              the nervous system and diagnoses ailments that affect the brain.</p>
           </div>
         </div>
 
@@ -155,8 +159,8 @@
             <img src="../../../assets/img/psychology.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Psychology</h5>
             <p>The department ensures its significant role in providing comprehensive
-                 treatment to psychiatric patients and in patients of other 
-                 departments on referrals</p>
+              treatment to psychiatric patients and in patients of other
+              departments on referrals</p>
           </div>
         </div>
 
@@ -164,10 +168,10 @@
           <div class="image-box bg-white shadow-lg p-3 rounded-3">
             <img src="../../../assets/img/urology.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Urology</h5>
-            <p>Urology is the field of medicine that is associated with the diseases and 
-                disorders of the male and female urinary tract. Urologists are 
-                who specialize in the treatment of conditions affecting the 
-                urinary system.</p>
+            <p>Urology is the field of medicine that is associated with the diseases and
+              disorders of the male and female urinary tract. Urologists are
+              who specialize in the treatment of conditions affecting the
+              urinary system.</p>
           </div>
         </div>
 
@@ -175,7 +179,8 @@
           <div class="image-box bg-white shadow-lg p-3 rounded-3">
             <img src="../../../assets/img/oncology.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Oncology</h5>
-            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam eaque ipsa quae ab illo inventore veritatis et.</p>
+            <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam
+              rem aperiam eaque ipsa quae ab illo inventore veritatis et.</p>
           </div>
         </div>
 
@@ -196,10 +201,10 @@
           <div class="image-box bg-white shadow-lg p-3 rounded-3">
             <img src="../../../assets/img/doctors1.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Ms.Jenny</h5>
-            <p>Cardiology is the medical speciality dealing with 
-                the diagnosis and treatment of diseases and disorders of the heart.
-                 Also treated are abnormal heart rhythms, heart failure,
-                  high blood pressure and some rarer conditions.</p>
+            <p>Cardiology is the medical speciality dealing with
+              the diagnosis and treatment of diseases and disorders of the heart.
+              Also treated are abnormal heart rhythms, heart failure,
+              high blood pressure and some rarer conditions.</p>
           </div>
         </div>
 
@@ -207,10 +212,10 @@
           <div class="image-box bg-white shadow-lg p-3 rounded-3">
             <img src="../../../assets/img/doctors2.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Mr.John</h5>
-            <p>Dermatology is the branch of medicine dealing with the skin.  
-                A dermatologist is a specialist medical 
-                doctor who manages diseases related to skin, hair, nails, and 
-                some cosmetic problems.</p>
+            <p>Dermatology is the branch of medicine dealing with the skin.
+              A dermatologist is a specialist medical
+              doctor who manages diseases related to skin, hair, nails, and
+              some cosmetic problems.</p>
           </div>
         </div>
 
@@ -219,20 +224,21 @@
             <img src="../../../assets/img/doctors3.png" class="img-fluid">
             <h5 class="mt-3 fw-bold">Ms. Kelly</h5>
             <p>Neurology is a branch of medical science that focuses on the brain
-                 and its different aspects. It focuses on treating conditions that affect
-                 the nervous system and diagnoses ailments that affect the brain.</p>
+              and its different aspects. It focuses on treating conditions that affect
+              the nervous system and diagnoses ailments that affect the brain.</p>
           </div>
         </div>
       </div>
     </div>
-</section>
+  </section>
 
   <!-- Footer -->
   <footer class="bg-dark py-5">
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <h2 class="text-white fw-bold display-5">We develop & <br /><span class="text-primary">create quality care</span></h2>
+          <h2 class="text-white fw-bold display-5">We develop & <br /><span class="text-primary">create quality
+              care</span></h2>
         </div>
 
         <div class="col-md-3 text-white">
@@ -270,4 +276,5 @@
     </div>
   </footer>
 </body>
+
 </html>
