--- a/src/app/components/check-appoitment/check-appointment.component.html
+++ b/src/app/components/check-appoitment/check-appointment.component.html
@@ -1,17 +1,8 @@
-
-
 <div ag-grid="gridOptions" class="ag-theme-bootstrap" ng-controller="ParentCtrl">
-  <div class="container-fluid"> 
-    <ag-grid-angular 
-    style="width: 100%; height: 400px" 
-    class="ag-theme-alpine"
-    [columnDefs]="columns"
-    [defaultColDef]="defaultColDef"
-    [rowData]="rowData"
-    (gridReady)="onGridReady($event)"
-    [rowSelection]="rowSelection" 
-    (selectionChanged)="onSelectionChanged()"
-     ></ag-grid-angular>
+  <div class="container-fluid">
+    <ag-grid-angular style="width: 100%; height: 400px" class="ag-theme-alpine" [columnDefs]="columns"
+      [defaultColDef]="defaultColDef" [rowData]="rowData" (gridReady)="onGridReady($event)"
+      [rowSelection]="rowSelection" (selectionChanged)="onSelectionChanged()"></ag-grid-angular>
   </div>
 </div>
 
